# haskell-mooc

.github/workflows/: haskell.yml
exercises/: .ghci  Set1.hs  Set10a.hs  Set10b.hs  Set11a.hs  Set11b.hs  Set12.hs  Set13a.hs  Set13b.hs  Set14a.hs  Set14b.hs  Set15.hs  Set16a.hs  Set16b.hs  Set2a.hs  Set2b.hs  Set3a.hs  Set3b.hs  Set4a.hs  Set4b.hs  Set5a.hs  Set5b.hs  Set6.hs  Set7.hs  Set8.hs  Set9a.hs  Set9b.hs  stack.yaml  tests.cabal
